--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,10 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  padding: 10px;
+  margin: 10px;
+  font-size: 24px;
+  border-radius: 6px;
+}
